--- a/client/admin/users/users.html
+++ b/client/admin/users/users.html
@@ -58,6 +58,11 @@
                                         <a href="https://twitter.com/{{ twitter.screenName }}" target="_blank">{{ twitter.screenName }}</a>
                                     </div>
                                 {{ /if }}
+                                {{ #if password }}
+                                    <div>
+                                        Password
+                                    </div>
+                                {{ /if }}
                             {{ /with }}
                         </td>
                         <td>
