--- a/client/profile/accounts/google/google.html
+++ b/client/profile/accounts/google/google.html
@@ -1,8 +1,5 @@
 <template name="profileAccountsGoogle">
-    <div class="google">
-        <legend>Google</legend>
-        <button class="btn btn-google btn-block">
-            Attach
-        </button>
-    </div>
+    <button class="btn btn-google btn-block attachBtn">
+        Attach Google account
+    </button>
 </template>
