--- a/client/profile/accounts/twitter/twitter.html
+++ b/client/profile/accounts/twitter/twitter.html
@@ -1,8 +1,5 @@
 <template name="profileAccountsTwitter">
-    <div class="twitter">
-        <legend>Twitter</legend>
-        <button class="btn btn-twitter btn-block">
-            Attach
-        </button>
-    </div>
+    <button class="btn btn-twitter btn-block attachBtn">
+        Attach Twitter account
+    </button>
 </template>
