--- a/client/profile/accounts/facebook/facebook.html
+++ b/client/profile/accounts/facebook/facebook.html
@@ -1,5 +1,14 @@
 <template name="profileAccountsFacebook">
-    <button class="btn btn-facebook btn-block attachBtn">
-        Attach Facebook account
-    </button>
+    {{ #if services.facebook }}
+        {{ #with services.facebook }}
+            {{ id }}
+        {{ /with }}
+        <button class="btn btn-facebook btn-xs attachBtn">
+            Change Facebook account
+        </button>
+    {{ else }}
+        <button class="btn btn-facebook btn-block attachBtn">
+            Attach Facebook account
+        </button>
+    {{ /if }}
 </template>
