--- a/client/profile/accounts/google/google.html
+++ b/client/profile/accounts/google/google.html
@@ -1,5 +1,14 @@
 <template name="profileAccountsGoogle">
-    <button class="btn btn-google btn-block attachBtn">
-        Attach Google account
-    </button>
+    {{ #if services.google }}
+        {{ #with services.google }}
+            {{ id }}
+        {{ /with }}
+        <button class="btn btn-google btn-xs attachBtn">
+            Change Google account
+        </button>
+    {{ else }}
+        <button class="btn btn-google btn-block attachBtn">
+            Attach Google account
+        </button>
+    {{ /if }}
 </template>
