--- a/client/profile/accounts/google/google.html
+++ b/client/profile/accounts/google/google.html
@@ -8,7 +8,7 @@
                 <a class="name" href="https://plus.google.com/{{ id }}" target="_blank">{{ name }}</a>
             {{ /with }}
             <div class="actions btn-group btn-group-xs" role="group">
-                <button class="btn btn-google attachBtn">
+                <button class="btn btn-default attachBtn">
                     Change
                 </button>
                 <button class="btn btn-danger detachBtn">
