--- a/client/profile/accounts/facebook/facebook.html
+++ b/client/profile/accounts/facebook/facebook.html
@@ -8,7 +8,7 @@
                 <a class="name" href="{{ link }}" target="_blank">{{ name }}</a>
             {{ /with }}
             <div class="actions btn-group btn-group-xs" role="group">
-                <button class="btn btn-facebook attachBtn">
+                <button class="btn btn-default attachBtn">
                     Change
                 </button>
                 <button class="btn btn-danger detachBtn">
