--- a/client/profile/accounts/twitter/twitter.html
+++ b/client/profile/accounts/twitter/twitter.html
@@ -8,7 +8,7 @@
                 <a class="name" href="https://twitter.com/{{ screenName }}" target="_blank">{{ screenName }}</a>
             {{ /with }}
             <div class="actions btn-group btn-group-xs" role="group">
-                <button class="btn btn-twitter attachBtn">
+                <button class="btn btn-default attachBtn">
                     Change
                 </button>
                 <button class="btn btn-danger detachBtn">
