--- a/client/profile/accounts/twitter/twitter.html
+++ b/client/profile/accounts/twitter/twitter.html
@@ -5,7 +5,7 @@
                 <div class="image">
                     <img src="{{profile_image_url}}" />
                 </div>
-                <a class="name" href="https://twitter.com/{{ screenName }}" target="_blank">{{ screenName }}</a>
+                <a class="name" href="https://twitter.com/{{ screenName }}" target="_blank">@{{ screenName }}</a>
             {{ /with }}
             <div class="actions btn-group btn-group-xs" role="group">
                 <button class="btn btn-default attachBtn">
