--- a/client/profile/accounts/facebook/facebook.html
+++ b/client/profile/accounts/facebook/facebook.html
@@ -7,7 +7,7 @@
                 </div>
                 <a class="name" href="{{ link }}" target="_blank">{{ name }}</a>
             {{ /with }}
-            <div class="actions btn-group btn-group-xs" role="group">
+            <div class="actions btn-group btn-group-xs pull-right" role="group">
                 <button class="btn btn-default attachBtn">
                     Change
                 </button>
