--- a/client/profile/accounts/twitter/twitter.html
+++ b/client/profile/accounts/twitter/twitter.html
@@ -7,7 +7,7 @@
                 </div>
                 <a class="name" href="https://twitter.com/{{ screenName }}" target="_blank">@{{ screenName }}</a>
             {{ /with }}
-            <div class="actions btn-group btn-group-xs" role="group">
+            <div class="actions btn-group btn-group-xs pull-right" role="group">
                 <button class="btn btn-default attachBtn">
                     Change
                 </button>
