--- a/client/profile/details/emails/emails.html
+++ b/client/profile/details/emails/emails.html
@@ -9,11 +9,11 @@
         {{ #each emails }}
             {{address}}
             {{ #if verified}}
-                <span class="label label-default">Verified</span>
+                <span class="label label-success">Verified</span>
             {{ else }}
                 <button class="verifyBtn btn btn-primary btn-xs">Verify</button>
             {{ /if }}
-            <button class="deleteBtn btn btn-danger btn-xs">Delete</button>
+            <button class="deleteBtn btn btn-danger btn-xs">Detach</button>
         {{ /each }}
     </div>
 </template>
