--- a/client/dialogs/createProduct/createProduct.html
+++ b/client/dialogs/createProduct/createProduct.html
@@ -1,9 +1,9 @@
-<template name="createShopDlg">
-    <div class="modal" id="createShopDlg">
+<template name="createProductDlg">
+    <div class="modal" id="createProductDlg">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Create new shop</h4>
+                    <h4 class="modal-title">Create new product</h4>
                 </div>
                 <form class="form-horizontal" role="form">
                     <div class="modal-body">
