--- a/client/management/products/edit/images/images.html
+++ b/client/management/products/edit/images/images.html
@@ -10,7 +10,7 @@
                 </button>
             </nav>
             {{ #if image }}
-            <img src="{{ image.url }}" />
+            <img src="{{ abs image.url }}" />
             {{ /if }}
         </div>
         <div class="editState">
