--- a/client/marketplace/marketplace.html
+++ b/client/marketplace/marketplace.html
@@ -6,7 +6,7 @@
                 <div class="col-xs-6 col-sm-4">
                     <a class="product-card" href="{{pathFor route='products.view' data=this }}">
                         {{ #if image }}
-                        <img src="{{ image.url }}" />
+                        <img src="{{ abs image.url }}" />
                         {{ /if }}
                         <div class="info">
                             <h3>
