--- a/client/management/shops/edit/products/products.html
+++ b/client/management/shops/edit/products/products.html
@@ -12,7 +12,7 @@
                 <div class="col-xs-6 col-sm-4">
                     <a class="product-card" href="{{pathFor route='products.edit' data=this }}">
                         {{ #if image }}
-                        <img src="{{ image.url }}" />
+                        <img src="{{ abs image.url }}" />
                         {{ /if }}
                         <div class="info">
                             <h3>
