--- a/client/dialogs/attachFacebookPagesToShop/attachFacebookPagesToShop.html
+++ b/client/dialogs/attachFacebookPagesToShop/attachFacebookPagesToShop.html
@@ -1,5 +1,5 @@
 <template name="attachFacebookPagesToShopDlg">
-    <div class="modal" id="attachFacebookPagesToShopDlg">
+    <div class="modal fade" id="attachFacebookPagesToShopDlg">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
