--- a/client/dialogs/auth/auth.html
+++ b/client/dialogs/auth/auth.html
@@ -1,5 +1,5 @@
 <template name="authDlg">
-    <div class="modal" id="authDlg">
+    <div class="modal fade" id="authDlg">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
