--- a/client/dialogs/createProduct/createProduct.html
+++ b/client/dialogs/createProduct/createProduct.html
@@ -1,5 +1,5 @@
 <template name="createProductDlg">
-    <div class="modal" id="createProductDlg">
+    <div class="modal fade" id="createProductDlg">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
