--- a/client/dialogs/createShop/createShop.html
+++ b/client/dialogs/createShop/createShop.html
@@ -1,5 +1,5 @@
 <template name="createShopDlg">
-    <div class="modal" id="createShopDlg">
+    <div class="modal fade" id="createShopDlg">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
