--- a/client/dialogs/addEmail/addEmail.html
+++ b/client/dialogs/addEmail/addEmail.html
@@ -1,5 +1,5 @@
 <template name="addEmailDlg">
-    <div class="modal" id="addEmailDlg">
+    <div class="modal fade" id="addEmailDlg">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
