--- a/client/management/shops/edit/edit.html
+++ b/client/management/shops/edit/edit.html
@@ -50,6 +50,12 @@
         </div>
         <div class="block">
             <div class="container">
+                <h2 class="page-header">Changes history</h2>
+                {{> managementShopsEditHistory }}
+            </div>
+        </div>
+        <div class="block">
+            <div class="container">
                 <h2 class="page-header text-danger">{{_ "management.shop.edit.remove.header"}}</h2>
                 {{> managementShopsEditRemove }}
             </div>
