--- a/client/main.html
+++ b/client/main.html
@@ -13,6 +13,15 @@
         ga('create', 'UA-57139532-2', 'auto');
         ga('require', 'ecommerce');
     </script>
+    <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-152x152-precomposed.png">
+    <!--[if IE]><link rel="shortcut icon" href="/favicon.ico"><![endif]-->
+    <link rel="icon" href="/favicon-16.png" sizes="16x16">
+    <link rel="icon" href="/favicon-32.png" sizes="32x32">
+    <link rel="icon" href="/favicon-48.png" sizes="48x48">
+    <link rel="icon" href="/favicon-64.png" sizes="64x64">
+    <link rel="icon" href="/favicon-128.png" sizes="128x128">
+    <meta name="msapplication-TileColor" content="#3DA3A7">
+    <meta name="msapplication-TileImage" content="path/to/tileicon.png">
 </head>
 
 <body>
