--- a/client/main.html
+++ b/client/main.html
@@ -25,6 +25,11 @@
             }, 0);
         }
     </script>
+    <script>
+        $(function() {
+            $.material.init();
+        });
+    </script>
     <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-152x152-precomposed.png">
     <!--[if IE]><link rel="shortcut icon" href="/favicon.ico"><![endif]-->
     <link rel="icon" href="/favicon-16.png" sizes="16x16">
